CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(S14X)

ADD_DEFINITIONS("-Wall -std=c++0x -g")
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake_modules/")

FIND_PACKAGE(KGLT REQUIRED)
FIND_PACKAGE(KAZMATH REQUIRED)
FIND_PACKAGE(Boost COMPONENTS system filesystem thread date_time regex REQUIRED)
FIND_PACKAGE(Freetype REQUIRED)

FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(SIGC QUIET sigc++-2.0)

PKG_CHECK_MODULES(SDL QUIET sdl)
PKG_CHECK_MODULES(GL QUIET gl)
PKG_CHECK_MODULES(GLU QUIET glu)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}
    ${SIGC_INCLUDE_DIRS}
    ${KGLT_INCLUDE_DIRS}
    ${KAZMATH_INCLUDE_DIRS}
    ${SDL_INCLUDE_DIRS}
    ${GL_INCLUDE_DIRS}
    ${GLU_INCLUDE_DIRS}    
    ${FREETYPE_INCLUDE_DIRS}
)

LINK_LIBRARIES(

    ${KGLT_LIBRARIES}
    ${KAZMATH_LIBRARIES}

    ${Boost_FILESYSTEM_LIBRARY}
    ${Boost_SYSTEM_LIBRARY}
    ${Boost_THREAD_LIBRARY}
    ${Boost_DATE_TIME_LIBRARY}    

    ${SDL_LIBRARIES}
    ${GL_LIBRARIES}
    ${GLU_LIBRARIES}

    ${SIGC_LIBRARIES}
    ${FREETYPE_LIBRARY}
)

ADD_SUBDIRECTORY(k4x)

#Link with k4x for all subsequent programs
LINK_LIBRARIES(k4x)

ADD_SUBDIRECTORY(s14x)

PKG_CHECK_MODULES(UNITTEST unittest++)

INCLUDE_DIRECTORIES(
    ${UNITTEST_INCLUDE_DIRS}
)

LINK_LIBRARIES(
    ${UNITTEST_LIBRARIES}
)

ADD_SUBDIRECTORY(tests)
